--- a/Venture/templates/index.html
+++ b/Venture/templates/index.html
@@ -10,45 +10,72 @@
      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+     <script src="https://use.fontawesome.com/a7a261d4db.js"></script>
+
+     <!-- Google Fonts -->
+     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+   
+     <!-- Vendor CSS Files -->
+     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="Style/index.css">
   </head>
   <body>
 
-        <nav class="navbar navbar-dark navbar-expand-lg navbar-light bg-dark sticky-top justify-content-center ">
+    <nav class="navbar navbar-dark navbar-expand-lg navbar-light bg-dark sticky-top justify-content-center ">
 
-       <a class="navbar-brand" href="#">
-         <img src="" width="30" height="30" alt="" loading="lazy">
-       </a>
-          <a class="navbar-brand" href="index.html">AR Graphers</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+        <a class="navbar-brand" href="#">
+          <img src="static/bck.png" width="30" height="30" alt="" loading="lazy">
+        </a>
+           <a class="navbar-brand" href="index">Venture</a>
+           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+             <span class="navbar-toggler-icon"></span>
+           </button>
+ 
+           <div class="collapse navbar-collapse  " id="navbarSupportedContent">
+             <ul class="navbar-nav ml-auto">
+               <li class="nav-item active">
+                 <a class="nav-link" href="index">Home <span class="sr-only">(current)</span></a>
+               </li>
+               <li class="nav-item active">
+                 <a class="nav-link" href="dispAll">Display</a>
+               </li>
+               <li class="nav-item active">
+                 <a class="nav-link" href="Job_entry">Job Application</a>
+               </li>
+ 
+             </ul>
+               </nav>
 
-          <div class="collapse navbar-collapse  " id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="dispApp.html">Display</a>
-              </li>
 
 
-            </ul>
-              </nav>
-
-
-
-   <div class="container"><img class="background" src=""/>
 
    
-<div class="container">
-
-<h1>This will be the home page</h1>
+<!-- <div class="container">  -->
+<br><br><br><br>
+<h1>Welcome To Venture</h1>
 <br>
-<h3>Edit later</h3>
+<h3>Find employees in your community</h3>
+<!-- </div> -->
 
 
+<br><br><br><br>
+      <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
+        <h1  style="text-align:justify;">Who are we?</h1>
+        <br>
+
+        <p>Venture is a platform that allows you to find the best suitable job for you within your locality. We firmly believe that nobody understands the market and demands of particular locality the way a local person does.  By providing such a platform, we help increasing the employment while helping the job-seeking population reach their maximum potential. This space is also perfect for employers, who require particular skill-sets from their employees. This mostly helps our small and local businesses, that usually find their sales to restrained to their own localities. By finding a resident of the same locality, they will be able to find an employee with unmatched market knowledge. It is a platform helpful to everyone</p>
+      </div>
+
+      <div class="bgimg-2">
+        <div class="caption">
+        <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">SONGS</span>
+        </div>
+      </div>
+
+      
+
+<!-- Template Main JS File -->
+<script src="index.js"></script>
 </div>
 
 
