--- a/Venture/templates/JobInput.html
+++ b/Venture/templates/JobInput.html
@@ -14,28 +14,32 @@
   </head>
   <body>
 
-        <nav class="navbar navbar-dark navbar-expand-lg navbar-light bg-dark sticky-top justify-content-center ">
+    <nav class="navbar navbar-dark navbar-expand-lg navbar-light bg-dark sticky-top justify-content-center ">
 
-       <a class="navbar-brand" href="#">
-         <img src="" width="30" height="30" alt="" loading="lazy">
-       </a>
-          <a class="navbar-brand" href="index.html">AR Graphers</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <div class="collapse navbar-collapse  " id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="dispApp.html">Display</a>
-              </li>
-
-
-            </ul>
-              </nav>
+        <a class="navbar-brand" href="#">
+          <img src="static/bck.png" width="30" height="30" alt="" loading="lazy">
+        </a>
+           <a class="navbar-brand" href="index">Venture</a>
+           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+             <span class="navbar-toggler-icon"></span>
+           </button>
+ 
+           <div class="collapse navbar-collapse  " id="navbarSupportedContent">
+             <ul class="navbar-nav ml-auto">
+               <li class="nav-item active">
+                 <a class="nav-link" href="index">Home <span class="sr-only">(current)</span></a>
+               </li>
+               <li class="nav-item active">
+                 <a class="nav-link" href="dispAll">Display</a>
+               </li>
+               <li class="nav-item active">
+                 <a class="nav-link" href="Job_entry">Job Application</a>
+               </li>
+ 
+             </ul>
+               </nav>
+ 
+ 
 
 
 
